<resources>
    <string name="app_name" translatable="false">Crabir</string>
    <string name="licenses">Licenses</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Subscriptions">Subscriptions</string>
    <string name="Inbox">Inbox</string>
    <string name="Profile">Profile</string>
    <string name="History">History</string>
    <string name="history">History</string>
    <string name="saved">Saved</string>
    <string name="gallery">Gallery</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="lateral_menu">Lateral Menu</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_account">Add account</string>
    <string name="logout">Logout</string>
    <string name="login_dialog_warning_title">Warning</string>
    <string name="login_warning">If you cannot log in on the next page, try rotating your phone in landscape mode and close the cookie banner that appears behind the login prompt.</string>
    <string name="no_other_accounts">No other accounts</string>
    <string name="home_shortcut_short_label">Home</string>
    <string name="home_shortcut_long_label">Go to home feed</string>
    <string name="search_shortcut_short_label">Search</string>
    <string name="search_shortcut_long_label">Search on Reddit</string>
    <string name="popular_shortcut_short_label" translatable="false">r/popular</string>
    <string name="popular_shortcut_long_label">Go to r/popular</string>
    <string name="all_shortcut_short_label" translatable="false">r/all</string>
    <string name="all_shortcut_long_label">Go to r/all</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="general_settings_title">General</string>
    <string name="theme_settings">Theme settings</string>
    <string name="theme_settings_title">Theme settings</string>
    <string name="theme">Theme</string>
    <string name="dynamic_color">Dynamic color</string>
    <string name="appearance">Appearance</string>
    <string name="theme_editor">Theme editor</string>
    <string name="edit_colors">Edit Colors</string>
    <string name="select_a_color">Select a color</string>
    <string name="reset_color">Reset color</string>
    <string name="reset_theme">Reset to default</string>
    <string name="saved_themes">Saved themes</string>
    <plurals name="total_themes">
        <item quantity="one">%d theme</item>
        <item quantity="other">%d themes</item>
    </plurals>
    <string name="light_mode_start_time">Light mode start time</string>
    <string name="light_mode_end_time">Light mode end time</string>
    <string name="theme_post_title">Post title</string>
    <string name="theme_read">Read</string>
    <string name="theme_announcement">Announcement</string>
    <string name="theme_community">Community</string>
    <string name="theme_secondary_text">Secondary text</string>
    <string name="theme_content_text">Content text</string>
    <string name="theme_link">Link</string>
    <string name="theme_downvote">Downvote</string>
    <string name="color_picker_presets">Presets</string>
    <string name="color_picker_custom">Custom</string>
    <string name="DarkMode">Dark</string>
    <string name="LightMode">Light</string>
    <string name="SystemMode">Follow system</string>
    <string name="ScheduledMode">Scheduled</string>
    <string name="posts_settings_name">Posts</string>
    <string name="post_settings">Post Settings</string>
    <string name="links_settings">Links settings</string>
    <string name="upvote_on_save">Upvote on save</string>
    <string name="start_videos_muted">Start videos muted</string>
    <string name="post_info_settings">Info settings</string>
    <string name="post_info_show_author">Show author</string>
    <string name="post_info_tap_author">Tap on author to go to profile</string>
    <string name="post_info_show_community">Show community</string>
    <string name="flair_settings">Flair settings</string>
    <string name="show_flair">Show flair</string>
    <string name="show_flair_color">Show flair color</string>
    <string name="show_flair_emoji">Show flair emoji</string>
    <string name="click_on_flair_to_search">Click on flair to search</string>
    <string name="buttons_settings">Buttons settings</string>
    <string name="show_comments_button">Show comments</string>
    <string name="show_hide_post_button">Hide post</string>
    <string name="show_share_post_button">Share post</string>
    <string name="show_open_in_app_button">Open in app</string>
    <string name="show_mark_read_button">Mark as read</string>
    <string name="awards_settings_header">Awards</string>
    <string name="comments_settings_title">Comments</string>
    <string name="comments_settings_page_title">Comments settings</string>
    <string name="use_recommended_sort">Use recommended sort</string>
    <string name="preferred_sort">Preferred sort</string>
    <string name="media_preview">Media preview</string>
    <string name="buttons_always_visible">Buttons always visible</string>
    <string name="hide_buttons_after_vote">Hide buttons after vote</string>
    <string name="collapse_automod">Collapse automod</string>
    <string name="navigation_header">Navigation</string>
    <string name="show_navigation_bar">Show navigation bar</string>
    <string name="use_volume_keys_to_navigate">Use volume keys to navigate</string>
    <string name="data_settings_name">Data</string>
    <string name="data_settings">Data settings</string>
    <string name="Image_header">Image</string>
    <string name="preferred_quality_on_wifi">Preferred quality on wifi</string>
    <string name="preferred_quality_on_cellular">Preferred quality on cellular</string>
    <string name="enable_load_image">Load image</string>
    <string name="header_video">Video</string>
    <string name="autostart_video">Autostart video</string>
    <string name="filter_settings_name">Filters</string>
    <string name="filter_settings_title">Filter settings</string>
    <string name="filters">Filters</string>
    <string name="filtersPageTitle">Filters</string>
    <string name="nsfw_content">NSFW Content</string>
    <string name="showNSFW">Show NSFW</string>
    <string name="showNSFWMedia">Show NSFW Media</string>
    <string name="blurNSFW">Blur NSFW</string>
    <string name="edit_title_filters">Edit title filters</string>
    <string name="edit_author_filters">Edit author filters</string>
    <string name="edit_subreddit_filters">Edit subreddit filters</string>
    <string name="edit_domains_filters">Edit domains filters</string>
    <string name="edit_flair_filters">Edit flair filters</string>
    <string name="views_settings_title">Views</string>
    <string name="view_settings">View settings</string>
    <string name="default_view">Default view</string>
    <string name="default_number_of_columns">Default number of columns</string>
    <string name="remember_view_main">Remember view</string>
    <string name="remember_view_supporting">Each community will remember the last view selected for that community</string>
    <string name="manage_views">Manage views</string>
    <string name="communities_start_with_r">Communities start with r/</string>
    <string name="rounded_corners">Rounded corners</string>
    <string name="image_height">Image height</string>
    <string name="image_height_full">Full</string>
    <string name="image_height_fixed">Fixed</string>
    <string name="image_height_limit">Limit to 80% of screen height</string>
    <string name="show_thumbnail_for_link_preview">Show thumbnail for link preview</string>
    <string name="show_thumbnail_for_link_preview_support">Disable to use large image preview</string>
    <string name="enable_text_preview">Enable text preview</string>
    <string name="number_of_lines_main">Number of lines</string>
    <string name="number_of_lines_support">Maximum number of lines to preview</string>
    <string name="lines">lines</string>
    <string name="lateral_menu_settings">Lateral Menu Settings</string>
    <string name="lateral_menu_items_header">Items to show</string>
    <string name="subscriptions_list">Subscriptions list</string>
    <string name="show_in_menu">Show in menu</string>
    <string name="show_icons">Show icons</string>
    <string name="show_only_favorites">Show only favorites</string>
    <string name="home_feed">Home Feed</string>
    <string name="home_feed_support">Posts from subscriptions</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="go_to_community_setting">Go to community</string>
    <string name="go_to_user_setting">Go to user</string>
    <string name="dark_mode_setting">Dark mode</string>
    <string name="blur_nsfw_setting">Blur NSFW</string>
    <string name="show_nsfw_setting">Show NSFW</string>
    <string name="neutral_vote">Neutral Vote</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="share">Share</string>
    <string name="share_post">Share post</string>
    <string name="share_link">Share link</string>
    <string name="share_title_link">Share title + link</string>
    <string name="share_shortlink">Share shortlink</string>
    <string name="crosspost" translatable="false">Crosspost</string>
    <string name="report">Report</string>
    <string name="hide_post">Hide post</string>
    <string name="unhide_post">Unhide post</string>
    <string name="mute">Mute</string>
    <string name="mute_posts_from_user">Mute posts from u/%1$s</string>
    <string name="mute_posts_from_community">Mute posts from r/%1$s</string>
    <string name="mute_posts_from_domain">Mute posts from %1$s</string>
    <string name="mute_flair">Mute flair</string>
    <string name="open_in_app">Open in app</string>
    <string name="open_comments">Open comments</string>
    <string name="nsfw">NSFW</string>
    <string name="spoiler">Spoiler</string>
    <string name="moderation">Moderation</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_post_confirmation">Are you sure you want to delete this post?</string>
    <string name="change_flair">Change Flair</string>
    <string name="edit_flair">Edit flair</string>
    <string name="edit_flair_text">Edit flair text</string>
    <string name="community_has_no_flair">Community has no flair</string>
    <string name="end_of_feed_reached">End of Feed reached</string>
    <string name="feed_error">Error while loading: %1$s\nTap to retry</string>
    <plurals name="members">
        <item quantity="zero">No members</item>
        <item quantity="one">%d member</item>
        <item quantity="many">%d members</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="multi_subreddits">
        <item quantity="zero">No subreddit</item>
        <item quantity="one">%d subreddits</item>
        <item quantity="many">%d subreddits</item>
        <item quantity="other">%d subreddits</item>
    </plurals>
    <string name="create_post">Create post</string>
    <string name="submit">Submit</string>
    <string name="title_field">Title</string>
    <string name="missing_title_error">Missing title</string>
    <string name="body_placeholder">Type content</string>
    <string name="body_label">Content</string>
    <string name="caption_placeholder">Caption</string>
    <string name="add_media">Add media</string>
    <string name="select_community">Select Community</string>
    <string name="community_placeholder">Community</string>
    <string name="missing_community_error">Missing community</string>
    <string name="rules_button">RULES</string>
    <string name="send_reply_notification">Send reply notification</string>
</resources>